# chip-8

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/emulator/: cpu.rs  instructions.rs  mod.rs
src/ui/: mod.rs  themes.rs
